# example-codes

cmake-static-lib/: README
cmake-static-lib/source/: CMakeLists.txt  main.cpp  obj1.cpp  obj2.cpp  obj3.cpp  testlib.h
hello-world/fortran/: CMakeLists.txt  cmake_command.txt  main.f90
